--- a/blog_app/templates/index.html
+++ b/blog_app/templates/index.html
@@ -1,7 +1,18 @@
-{% extends "layout.html" %}
+{% extends "reader_layout.html" %}
 {%block title%}
 	Home
 {% endblock %}
 
 {%block body%}
+	<div>
+		<h2>Featured Posts</h2>
+		<div id="featured-post-holder">
+		</div>
+	</div>
+	<br>
+	<div>
+		<h2>Recent Posts</h2>
+		<div id="recent-post-holder">
+		</div>
+	</div>
 {% endblock %}
